consumer/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: consumer
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
